# proiect

./: CMakeLists.txt  README.md  color.cpp  colour.cpp  item11and12.cpp  main.cpp  namespace.cpp  operations.cpp  people.cpp  red.cpp  tema3.cpp
